--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "three": "^0.180.0",
     "vaul": "^1.1.2",
     "vite-plugin-glsl": "^1.5.1",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
+    "xterm-addon-web-links": "^0.9.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
